# testudo

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  run-init-admin.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  useful_cmds.txt
.cursor/rules/: accounts-methods.mdc  frontend-foundations.mdc  project-overview.mdc  solana.mdc  testudo-marketing-and-growth-partnership-rule.mdc
anchor/: Anchor.toml  \wsl.localhostUbuntuhomewill-shirley.configsolanatestudo-mainnet.json  package-lock.json  package.json  tsconfig.json  wsl.localhostUbuntuhomewill-shirley.configsolanatestudo-mainnet.json
anchor/programs/basic/: Cargo.toml
anchor/programs/basic/src/: errors.rs  lib.rs
anchor/programs/basic/src/custom_accounts/: centurion.rs  legate.rs  mod.rs  testudo.rs
anchor/programs/basic/src/instructions/: deposit_sol.rs  deposit_spl.rs  init_centurion.rs  init_legate.rs  mod.rs
anchor/programs/testudo/: Cargo.toml
anchor/src/: index.ts  testudo-exports.ts
anchor/tests/: README.md  centurion.test.ts  keypair_functions.ts  keypair_gen.ts  legate.test.ts  testudo.spec.ts
anchor/tests/utils/: setup.ts
src/app/: fonts.ts  globals.css  layout.tsx  page.tsx  react-query-provider.tsx
src/app/about/: page.tsx
src/app/clusters/: page.tsx
src/app/components/: CustomWalletButton.tsx  Footer.tsx  Header.tsx
src/app/dashboard/: page.tsx
src/scripts/: add-mint-to-whitelist.ts  deploy-devnet.sh  init-admin.ts  init_legate.ts  keypair-functions_scripts.ts  tsconfig.json  update-fee-percent.ts  update-treasury.ts  update_legate_authority.ts
(+97 files in other folders)
